[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bindings = { path = "../bindings" }
clap = { version = "4.4.2", features = ["derive"] }
ethers = { version = "2", default-features = false, features = ["rustls"] }
eyre = "0.6"
hex = "0.4.3"
tokio = { version = "1.19", features = ["macros","rt-multi-thread"] }
